--- a/App.config
+++ b/App.config
@@ -1,9 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
   <appSettings>
-    <add key="DataSource" value="193.85.203.188"/>
-    <add key="Database" value="pirich"/>
-    <add key="Name" value="pirich"/>
-    <add key="Password" value="f3FEMTu3"/>
+    <add key="DataSource" value=""/>
+    <add key="Database" value=""/>
+    <add key="Name" value=""/>
+    <add key="Password" value=""/>
   </appSettings>
 </configuration>
